# AskOLMo

./: Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml
askolmo/: askolmo.py
askolmo/safety/: SafetyChecker.py  config.py  google_moderation_text.py
discord/: Dockerfile  config.yaml  discord_chat.py  google_moderation_text.py  requirements.txt
discord/safety/: google_moderation_text.py
discord/src/: config.py
