[project]
name = "askolmo"
version = "0.1.0"
description = "Discord bot for Ai2's OLMo language models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py>=2.3.0",
    "google-cloud-language>=2.17.2",
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "openai>=1.107.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
askolmo = "askolmo.askolmo:main"

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
